--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -37,6 +37,14 @@ img{
     margin-right: 0px;
     
 }
+.col-md-5{
+    display: grid;
+    border: cornsilk;
+    background-color: ghostwhite;
+    padding-right: 0px;
+    margin-right: 0px;
+    
+}
 .container {
     padding-top: 30px;
     padding-bottom: 30px;
