added personal info

--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ main {
     font-size: medium;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+.perinfo {
+    font-weight: bold;
+}
 @media screen and (max-width: 768px){
     img {
         margin-bottom: 40px;
